[tool.poetry]
name = "muffin-databases"
version = "0.6.0"
description = "Async support for a range of databases"
readme = "README.rst"
license = "MIT"
authors = ["Kirill Klenov <horneds@gmail.com>"]
keywords = ["sql", "postgres", "mysql", "sqlite", "asyncio", "asgi", "web", "muffin"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Framework :: AsyncIO",
]
homepage = "https://github.com/klen/muffin-databases"
repository = "https://github.com/klen/muffin-databases"

[tool.poetry.dependencies]
python = "^3.9"
muffin = "*"
databases = "*"

[tool.poetry.group.dev.dependencies]
aiosqlite = "*"
pytest = "*"
pytest-aio = "*"
pytest-mypy = "*"
ruff = "*"
pre-commit = "*"

[tool.poetry.group.postgres.dependencies]
asyncpg = "*"

[tool.poetry.group.mysql.dependencies]
aiomysql = "*"

[tool.poetry.group.sqlite.dependencies]
aiosqlite = "*"

[tool.pytest.ini_options]
addopts = "-xsv tests.py"
log_cli = true

[tool.mypy]
packages = ["muffin_databases"]
install_types = true
non_interactive = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39,py310,py311,py312,pypy39

[testenv]
deps = -e .[tests]
commands =
	pytest --mypy tests.py

[testenv:pypy39]
deps = -e .[tests]
commands =
	pytest tests.py
"""

[tool.ruff]
fix = true
line-length = 100
target-version = "py39"
exclude = [".venv", "docs", "examples"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",
  "UP",
  "ANN",
  "DJ",
  "EM",
  "RSE",
  "SLF",
  "RET",
  "S101",
  "PLR2004",
  "PLR0912",
  "N804",
  "A003",
  "TRY003",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
