[bumpversion]
commit = True
current_version = 0.2.4
files = muffin_databases/__init__.py
tag = True
tag_name = {new_version}

[wheel]
python-tag = py3

[metadata]
name = muffin-databases
version = attr: muffin_databases.__version__
url = https://github.com/klen/muffin-databases
description = Async support for a range of databases
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = sql, postgres, mysql, sqlite, asyncio, asgi, web, muffin
project_urls = 
	Documentation = https://github.com/klen/muffin-databases
	Source code = https://github.com/klen/muffin-databases
	Issue tracker = https://github.com/klen/muffin-databases/issues
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Framework :: AsyncIO

[options]
packages = muffin_databases
include_package_data = True
python_requires = >= 3.7
install_requires = 
	muffin      >= 0.64.6
	databases   >= 0.4.1

[options.package_data]
muffin = 
	py.typed

[options.extras_require]
tests = 
	aiosqlite
	pytest
	pytest-aio
	pytest-mypy
postgres = 
	asyncpg
sqlite = 
	aiosqlite
mysql = 
	aiomysql

[pylama]
ignore = D211,D213

[pylama:setup.py]
ignore = D

[pylama:tests.py]
ignore = D

[tool:pytest]
addopts = -xsv --mypy

[tox:tox]
envlist = py37,py38,py39

[testenv]
deps = -e .[tests]
commands = 
	pytest tests.py

[mypy]
ignore_missing_imports = True
